# resources/views/emails/contato-geral.blade.php
@@ -20,7 +20,7 @@
                     </p>
                     <br> <hr>
                     <p style="font-size:12px; font-family:'Titillium Web', sans-serif; font-weight:bold; margin-top:0px;">
-                        * mensagem automática gerada a partir do formulário de contato de agentes*
+                        * mensagem automática gerada a partir do formulário de contato do site*
                     </p>
 
                 </td>
